Challenge09/dep-ch09-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: letschat
  labels:
    app: letschat
    tier: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: letschat
      tier: backend
  template:
    metadata:
      labels:
        app: leyschat
        tier: backend
    spec:
      containers:
        - name: letschat
          image: sdelements/lets-chat
          ports:
            - name: http-server
              containerPort: 8080
