Challenge09/srv-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
    tier: database
spec:
  type: NodePort
  ports:
    - name: mongo
      port: 27017
      targetPort: mongo-db
  selector:
    app: mongo
    tier: database
