Challenge09/ing-ch09.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeserver
spec:
  rules:
  - host: www.chat-tunombre.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeserver
            port:
              number: 80
